@@ -9,7 +9,21 @@ JSDOC = {
 JSDOC.VERSION = "2.0a";
 
 JSDOC.usage = function() {
-	//todo
+	print("USAGE: java -jar app/js.jar app/jsdoc.js [OPTIONS] <SRC_DIR> <SRC_FILE> ...");
+	print("");
+	print("OPTIONS:");
+	print("  -t=<PATH> or --template=<PATH>\n          Required. Use this template to format the output.\n");
+	print("  -d=<PATH> or --directory=<PATH>\n          Output to this directory (defaults to js_docs_out).\n");
+	print("  -e=<ENCODING> or --encoding=<ENCODING>\n          Use this encoding to read and write files.\n");
+	print("  -r=<DEPTH> or --recurse=<DEPTH>\n          Descend into src directories.\n");
+	print("  -x=<EXT>[,EXT]... or --ext=<EXT>[,EXT]...\n          Scan source files with the given extension/s (defaults to js).\n");
+	print("  -a or --allfunctions\n          Include all functions, even undocumented ones.\n");
+	print("  -A or --Allfunctions\n          Include all functions, even undocumented, underscored ones.\n");
+	print("  -p or --private\n          Include symbols tagged as private.\n");
+	print("  -o=<PATH> or --out=<PATH>\n          Print log messages to a file (defaults to stdout).\n");
+	print("  -h or --help\n          Show this message and exit.\n");
+	
+	java.lang.System.exit(0);
 }
 
 IO.includeDir("lib/JSDOC/");
